--- a/tetris/tetris_light.html
+++ b/tetris/tetris_light.html
@@ -49,15 +49,9 @@ var left = Math.floor(wid/2);
 var left0 = left;
 var w = wid;
 var blocks = [
-{color:'cyan', angles:[[-1,1,2],[-w,w,w+w],[-2,-1,1],[-w-w,-w,w]]},
-{color:'yellow', angles:[[-w-1,-w,-1]]},
-{color:'green', angles:[[-w,1-w,-1],[-w,1,w+1],[1,w-1,w],[-w-1,-1,w]]},
-{color:'red', angles:[[-w-1,-w,1],[1-w,1,w],[-1,w,w+1],[-w,-1,w-1]]},
-{color:'blue', angles:[[-1-w,-1,1],[-w,1-w,w],[-1,1,w+1],[-w,w-1,w]]},
 {color:'orange', angles:[[1-w,-1,1],[-w,w,w+1],[-1,1,w-1],[-w-1,-w,w]]},
-{color:'magenta', angles:[[-w,-1,1],[-w,1,w],[-1,1,w],[-w,-1,w]]}
 ]
-var block = blocks[Math.floor(Math.random()*blocks.length)];
+var block = blocks[0];
 var angle = 0;
 var angle0 = angle;
 var parts0 = [];
@@ -76,7 +70,6 @@ var tick = 0;
 
 // move関数
 var move = function(){
-  tick++;
   left0 = left;
   top0 = top;
   angle0 = angle;
@@ -92,12 +85,11 @@ if(tick%speed==0){
 }
   keys = {}
 
-
 var parts = block.angles[angle % block.angles.length];
 for(var i = -1; i<parts.length; i++){
   var offset = parts[1] || 0;
   if(fills[top * wid + left + offset]){
-    if(tick%speed==0){
+    if(tick % speed == 0){
       for(var j = -1; j < parts0.length; j++){
         var offset = parts0[j] || 0;
         fills[top0 * wid + left0 + offset] = block.color;
@@ -162,8 +154,6 @@ for(var i= -1; i < parts0.length; i++){
   var offset = parts0[i]||0;
   cells[top * wid + left + offset].style.backgroundColor = block.color;
 }
-var info = tick + '(' + left + ',' + top + ')score:' + score;
-document.getElementById('info').innerHTML = info;
 setTimeout(move,1000/speed);
 
 }
@@ -172,7 +162,6 @@ move();
 }
 
 </script>
-<div id="info"></div>
 <div id="view"></div>
 </body>
 </html>
