--- a/demo/sample2/index.html
+++ b/demo/sample2/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
+
 <div class="btn" onclick="levelSort()">階級</div>
 <div class="btn" onclick="groupSort()">派閥</div>
+<h1 class="sorttitle1"></h1>
+<p class="info-text"></p>
+<div class="imgbox"></div>
+<h1 class="sorttitle2"></h1>
 <div class="clear"></div>
+<script src="info.js"></script>
 <script src="group.js"></script>
 <script src="level.js"></script>
 
