--- a/cocos2d-js_project01/index.html
+++ b/cocos2d-js_project01/index.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="/src/master.css">
 </head>
 <body>
-  <div id="gamewrapper">
-    <canvas id="gameCanvas" width="800" height="450"></canvas>
-  </div>
+    <canvas id="gameCanvas"></canvas>
     <script src="frameworks/cocos2d-js-v3.13.js"></script>
     <script src="src/main.js"></script>
 </body>
